x-pack/plugins/ml/public/application/jobs/jobs_list/components/multi_job_actions/_multi_job_actions.scss
// SASSTODO: This looks like it needs some rewriting for all the pixel values
.multi-select-actions {
  padding-right: $euiSizeS;
  padding-bottom: $euiSizeM;
  display: inline-block;
  white-space: nowrap;

  .actions-border, .actions-border-large {
    height: 20px;
    border-right: $euiBorderThin;
    width: 1px;
    display: inline-block;
    vertical-align: middle;
    margin: 0 5px;
  }
  .actions-border-large {
    height: 35px;
    margin: 0 15px;
    margin-top: -5px;
  }

  .results-button {
    margin-right: 5px;
  }

  // SASSTODO: Dangerous EUI overwrites
  .euiContextMenuPanel {
    .euiContextMenuItem__text {
      white-space: nowrap;
    }

    .euiContextMenuItem:last-child:not(.euiContextMenuItem-isDisabled) {
      color: $euiColorDanger;
    }
  }

}

.multi-select-actions-no-display {
  display: none;
}

