[ML] fix columns alignment

--- a/x-pack/plugins/ml/public/application/jobs/jobs_list/components/multi_job_actions/_multi_job_actions.scss
+++ b/x-pack/plugins/ml/public/application/jobs/jobs_list/components/multi_job_actions/_multi_job_actions.scss
@@ -16,7 +16,6 @@
   .actions-border-large {
     height: 35px;
     margin: 0 15px;
-    margin-top: -5px;
   }
 
   .results-button {
